[package]
name = "nft-metadata"
description = "Type definitions for non-fungible token (NFT) metadata"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wanderers-nft/nft-metadata-rs"
categories = ["cryptography::cryptocurrencies"]
keywords = ["erc-1155", "erc-721", "nft", "metadata"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rgb = "0.8.33"
serde = { version = "1.0.137", optional = true, features = ["derive"] }
url = "2.2.2"

[features]
serde = ["dep:serde", "url/serde", "hex/serde"]

[dev-dependencies]
serde_json = "1.0.82"
